src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Pincode__c</fullName>
        <formula>Account.CSC_PinCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Pincode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_adress__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>86</fullName>
                    <default>true</default>
                    <label>86</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Privacy__c</fullName>
        <label>Privacy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no automatic email</fullName>
                </value>
                <value>
                    <fullName>no email for quality survey</fullName>
                </value>
                <value>
                    <fullName>no phone for quality survey</fullName>
                </value>
                <value>
                    <fullName>no SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Zip_Postal_code__c</fullName>
        <label>Zip/Postal code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_SFDC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HP SFDC ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IM__c</fullName>
        <inlineHelpText>Example: LINE &amp; WhatsApp.</inlineHelpText>
        <label>IM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <description>UL @ibreakingpoint 20151112 for mapping</description>
        <formula>IF(AND( ISPICKVAL( Job_Function__c , &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;C Level&apos; ) ) , &apos;CEO&apos;, 
IF(AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CIO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CFO&apos; , 
IF( AND( ISPICKVAL( Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CXO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CXO&apos; , 
IF(AND( ISPICKVAL( Job_Function__c , &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Executive&apos; ) ) , &apos;CXO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CIO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CFO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos; )) , &apos;CXO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CXO&apos; , 
IF(AND( ISPICKVAL( Job_Function__c , &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Manager&apos; ) ) , &apos;LOB manager&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;IT Manager&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;Procurement Manager&apos; , 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;LOB manager&apos; , 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;Unknown&apos; , 
IF(AND( ISPICKVAL( Job_Function__c , &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Professional&apos; ) ) , &apos;LOB professional&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos;) ) , &apos;IT Professional&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos; ) ), &apos;Procurement Professional&apos; , 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos; )) , &apos;LOB professional&apos; , 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos;)), &apos;Unknown&apos;,&apos;Unknown&apos;))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>UL @ibreakingpoint 20151112</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Office</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Procurement</fullName>
                </value>
                <value>
                    <fullName>IT department</fullName>
                </value>
                <value>
                    <fullName>Line of Business</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>UL @ibreakingpoint 20151112</description>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C Level</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Left_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Valued_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Valued Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>Example: meet in Partner Launch.</inlineHelpText>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Survey_Date__c</fullName>
        <label>Send Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmitSurveyDay__c</fullName>
        <label>SubmitSurveyDay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeChat__c</fullName>
        <label>WeChat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wechat_Openid__c</fullName>
        <label>Wechat Openid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Extension__c</fullName>
        <label>Work Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>联系人是否CE</description>
        <label>isce</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IPMS_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.IPMS_Contact</value>
        </filters>
        <label>IPMS Contact</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>CSC_FST_Service_Contact</fullName>
        <active>true</active>
        <label>CSC &amp; FST Service Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPMS_Contact</fullName>
        <active>true</active>
        <label>IPMS Contact</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPMS_Contact_Title</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;IPMS_Contact&apos;,  OR(Title=&apos;&apos;, Email = &apos;&apos;)  )</errorConditionFormula>
        <errorMessage>Duty/Title or Email can&apos;t empty on contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Mobile_is_Required</fullName>
        <active>true</active>
        <description>When create new contact, User must fill in phone/Mobile phone.</description>
        <errorConditionFormula>AND(
ISBLANK(Phone),
ISBLANK( MobilePhone ),
 RecordType.Name != &apos;IPMS Contact&apos;

)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please fill in Phone or Mobile.</errorMessage>
    </validationRules>
</CustomObject>